global.css
ul {
    list-style-type: none;
    margin: 0;
    padding: 0;
    overflow: hidden;
    background-color: goldenrod;
  }
  
li {
    float: left;
}
  
li a {
    display: block;
    color: black;
    text-align: center;
    padding: 14px 16px;
    text-decoration: none;
    font-size: large;
    font-family: "Comic Sans", "Comic Sans MS", "Chalkboard", "ChalkboardSE-Regular", helvetica;
    font-weight: bold;
}
  
li a:hover {
    background-color: black;
    color: goldenrod;
}

nav {
    width: 100%;
}

body {
    margin: 0;
    font-family: "Comic Sans", "Comic Sans MS", "Chalkboard", "ChalkboardSE-Regular", helvetica;
}

img {
    height: 256px;
    width: 256px;
}

div {
    border-style: solid;
    border-color: goldenrod;
    border-width: medium;
    border-radius: 25px;
    margin: 15px 15px;
    padding: 10px 10px;
    display: inline-block;
}

div.description {
    float: left;
    width: 46%;
    display: inline-block;
}

div.large {
    width: 100%;
}

div.medium {
    width: 45%;
}

div.small {
    width: 20%;
}

a.link {
    display: block;
    background-color: black;
    text-align: center;
    color: goldenrod;
}

a:hover {
    background-color: goldenrod;
    color: black;
}

h3 {
    font-weight: normal;
}

section {
    width: 80%;
    margin: auto;
}

footer {
    background-color: black;
    color: goldenrod;
}

p.bold {
    font-weight: bold;
}

